--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,8 @@ env:
   - GO111MODULE=on
 
 script:
-  - go test -v
+  - go test -v -coverprofile=coverage.txt -covermode=atomic
   - go build
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
